--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "wesche"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 chrono = "0.4.38"
+async-std = { version = "1.10", features = ["attributes"] }
+serde = { version = "1.0.206", features = ["derive"] }
+serde_json = "1.0.122"
