--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ chrono = "0.4.38"
 async-std = { version = "1.10", features = ["attributes"] }
 serde = { version = "1.0.206", features = ["derive"] }
 serde_json = "1.0.122"
+notify-rust = "4.11.1"
