--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ async-std = { version = "1.10", features = ["attributes"] }
 serde = { version = "1.0.206", features = ["derive"] }
 serde_json = "1.0.122"
 notify-rust = "4.11.1"
+druid = {version = "0.8.3", features = ["im", "svg", "image"]}
+systray = "0.4.0"
