--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.122"
 notify-rust = "4.11.1"
 systray = "0.4.0"
 druid = {version = "0.8.3", features = ["im", "svg", "image"]}
+notify = "6.1.1"
